[filehelper]
name = "filehelper"
version = "0.1.0"
authors = [
  { name="Sevil", email="sevilbegum.gurcan@bahcesehir.edu.tr" },
]
description = "a small python package that provides tools for financial data analysis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/svlbgm/financehelper.git"

