[tool.poetry]
name = "financehelper"
version = "0.1.0"
authors = ["Sevil <sevilbegum.gurcan@bahcesehir.edu.tr>"]
description = "a small python package that provides tools for financial data analysis"
readme = "README.md"
requires-python = ">=3.8"
homepage = "https://github.com/svlbgm/financehelper.git"
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
